# yore

./: .copier-answers.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: ruff.toml
contributing/: index.html
coverage/: index.html
credits/: index.html
docs/: usage.md
license/: index.html
reference/SUMMARY/: index.html
reference/yore/: index.html
reference/yore/cli/: index.html
reference/yore/debug/: index.html
reference/yore/lib/: index.html
scripts/: gen_credits.py  make
search/: search_index.json
src/yore/: __init__.py  __main__.py  cli.py  debug.py  lib.py
tests/: __init__.py  test_cli.py  test_lib.py
usage/: index.html
